--- a/src/DashboardBundle/Resources/views/ContactList/edit.html.twig
+++ b/src/DashboardBundle/Resources/views/ContactList/edit.html.twig
@@ -108,6 +108,7 @@
     <h5> Manage contacts </h5>
     <div class="btn-group right">
       <a class="btn btn-small waves-dark waves-effect modal-trigger"  href="#modalAddContat"> <i class="mdi mdi-content-add left"></i>Add contact</a>
+      <a class="btn btn-small waves-dark waves-effect"  href="#modalAddContat"> <i class="mdi mdi-communication-import-export left"></i>Import contact</a>
     </div>
   </div>
 
